Small fix to autocomplete on tournament creator
Now the autocomplete box won't be too long

--- a/tenniShip/src/main/resources/static/css/style.css
+++ b/tenniShip/src/main/resources/static/css/style.css
@@ -1805,6 +1805,12 @@ body:not(#index) main#main {
     float: right;
 }
 
+body#TCreatorPage .ui-autocomplete {
+    max-height: 200px;
+    overflow-x: hidden;
+    overflow-y: scroll;
+}
+
 .Separateboth {
     clear: both;
 }
